Update dev/test password and database name

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,8 +19,8 @@ development:
   encoding: unicode
   database: speech-tastic_development
   pool: 5
-  username: speech-tastic
-  password:
+  username: speechtastic
+  password: speechtastic
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -48,13 +48,13 @@ test:
   encoding: unicode
   database: speech-tastic_test
   pool: 5
-  username: speech-tastic
-  password:
+  username: speechtastic
+  password: speechtastic
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: speech-tastic_production
+  database: speech-tastic
   pool: 5
   username: speech-tastic
   password:
